Fix the bootstrap-stylus bug that was causing exchange links to be off-center

--- a/hashwick-webapp/bootstrap.styl
+++ b/hashwick-webapp/bootstrap.styl
@@ -60,3 +60,7 @@
 
 // Theme
 @import "../vendor/bootstrap-stylus/theme"
+
+// Bugfix
+.list-inline
+  @extend .list-unstyled
