--- a/hashwick-webapp/ui/frame.all.styl
+++ b/hashwick-webapp/ui/frame.all.styl
@@ -18,6 +18,7 @@ tmp = "(min-width: " + $grid-float-breakpoint + ")"
 @media tmp
   .navbar-center
     position: absolute
+    left: 0
     width: 100%
     text-align: center
     &:not(:hover) .list-inline li
